<resources>
    <string name="app_name">PayYours</string>
    <string name="label_edit_settings">Edit Settings</string>
    <string name="quit">Quit</string>
    <string name="courts">Plätze:</string>
    <string name="players">Spieler:</string>
    <string name="to_pay">Zu zahlen:</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="settings">Settings</string>
    <string name="price_per_unit">Price per Unit</string>
    <string name="edit_default_players">Players</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_edit_settings_title">Settings</string>
    <string name="activity_edit_settings_title">Edit Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="txt_courts">Plätze:</string>
    <string name="txt_players">Spieler:</string>
    <string name="txt_to_pay">Betrag</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="et_courts">7</string>
    <string name="et_players">6</string>
    <string name="txt_price_per_unit">Preis je Platz:</string>
    <string name="txt_default_courts">Plätze:</string>
    <string name="txt_default_players">Spieler:</string>
    <string name="bt_ok">OK</string>
</resources>